# nlp

./: .gitignore  pyproject.toml
01_文本表示/: 01_jieba的基本使用.py  02_jieba加载自定义词典.py  03_gensim的使用.ipynb  04_基于真实语料训练词向量模型.py  05_验证自己训练的模型.ipynb  06_词向量的应用.py
02_传统序列模型/: 01_RNN.ipynb  02_LSTM.ipynb  03_GRU.ipynb
03_Attention/: 01_自注意力实现.ipynb  02_self_attention标准版本.py  03_multihead.py
04_Transformer/: 01_transformer_api.ipynb  02_transformer_encoder.py  03_test.py  04_transformer_翻译.py
05_translation_transformer/src/: config.py  dataset.py  model.py  predict.py  process.py  test.ipynb  tokenizer.py  train.py
06_hugging_face_api/: 01_basic_api.py
07_text_classify/src/: config.py  dataset.py  model.py  predict.py  process.py  test.ipynb  train.py
